# infineon-le-audio

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NOTICE  README.md  SBOM.md
cmake/: arm-cortex-m55.cmake  psoc_edge_e81.ld  psoc_edge_e82.ld
config/: FreeRTOSConfig.h  cy_bt_config.h  lc3_config.h
docs/: AT_COMMAND_IMPLEMENTATION_PLAN.md  README.md  architecture.md  initialization-refactoring.md
mtb/le-audio/: .gitignore  Makefile  README.md  common.mk  common_app.mk
mtb/le-audio/.mtbLaunchConfigs/: le-audio Debug MultiCore (KitProg3_MiniProg4).launch  le-audio Erase All.launch  le-audio Erase Device.launch  le-audio Program Application.launch  le-audio.proj_cm33_s Debug Multicore (KitProg3_MiniProg4).launch  proj_cm55 Debug MultiCore (KitProg3_MiniProg4).launch  proj_cm55 Erase All.launch  proj_cm55 Erase Device.launch  proj_cm55 Program Application.launch  proj_cm55.proj_cm33_s Debug Multicore (KitProg3_MiniProg4).launch
mtb/le-audio/bsps/TARGET_APP_KIT_PSE84_EVAL_EPC2/config/: design.modus
mtb/le-audio/docs/: design_and_implementation.md  using_the_code_example.md
mtb/le-audio/proj_cm33_ns/: Makefile  design.cybt  project_info.json
mtb/le-audio/proj_cm33_ns/.mtbLaunchConfigs/: le-audio.proj_cm33_ns Attach (KitProg3_MiniProg4).launch  le-audio.proj_cm33_ns Debug (KitProg3_MiniProg4).launch  le-audio.proj_cm33_ns Program (KitProg3_MiniProg4).launch  proj_cm55.proj_cm33_ns Attach (KitProg3_MiniProg4).launch  proj_cm55.proj_cm33_ns Debug (KitProg3_MiniProg4).launch  proj_cm55.proj_cm33_ns Program (KitProg3_MiniProg4).launch
mtb/le-audio/proj_cm33_ns/libs/: app.mk  mtb.mk
mtb/le-audio/proj_cm33_ns/source/: app.c  app.h  app_le_audio.c  app_le_audio.h  main.c
mtb/le-audio/proj_cm33_ns/source/app_bt/: app_bt_utils.c  app_bt_utils.h  bt.c  bt.h  gatt.c  gatt.h  isoc_peripheral.c  isoc_peripheral.h  link.c  link.h
mtb/le-audio/proj_cm33_ns/source/app_hw/button/: button.c  button.h
mtb/le-audio/proj_cm33_ns/source/app_iso_data_handler/: iso_data_handler.c  iso_data_handler.h
mtb/le-audio/proj_cm33_ns/source/app_nvm/: app_bt_bonding.c  app_bt_bonding.h
mtb/le-audio/proj_cm33_ns/source/app_retarget_io/: retarget_io_init.c  retarget_io_init.h
mtb/le-audio/proj_cm33_s/: project_info.json
mtb/le-audio/proj_cm33_s/.mtbLaunchConfigs/: le-audio.proj_cm33_s Attach (KitProg3_MiniProg4).launch  le-audio.proj_cm33_s Debug (KitProg3_MiniProg4).launch  le-audio.proj_cm33_s Program (KitProg3_MiniProg4).launch  proj_cm55.proj_cm33_s Attach (KitProg3_MiniProg4).launch  proj_cm55.proj_cm33_s Debug (KitProg3_MiniProg4).launch  proj_cm55.proj_cm33_s Program (KitProg3_MiniProg4).launch
mtb/le-audio/proj_cm33_s/libs/: app.mk  mtb.mk
mtb/le-audio/proj_cm55/: Makefile  main.c  project_info.json
mtb/le-audio/proj_cm55/.mtbLaunchConfigs/: proj_cm55.proj_cm55 Add CM55 to CM33 (KitProg3_MiniProg4).launch  proj_cm55.proj_cm55 Attach (KitProg3_MiniProg4).launch  proj_cm55.proj_cm55 Debug (KitProg3_MiniProg4).launch  proj_cm55.proj_cm55 Program.launch
mtb/le-audio/proj_cm55/libs/: app.mk  mtb.mk
mtb/le-audio/templates/TARGET_KIT_PSE84_EVAL_EPC4/config/: design.modus
source/: main.c  main_non_mtb.c
source/audio/: audio_buffers.c  audio_buffers.h  audio_task.c  audio_task.h  i2s_stream.c  i2s_stream.h  lc3_wrapper.c  lc3_wrapper.h
source/bluetooth/: bt_init.c  bt_init.h  bt_platform_config.c  bt_platform_config.h  gap_config.c  gap_config.h  gatt_db.c  gatt_db.h  hci_isoc.c  hci_isoc.h  link.c  link.h
source/cdc/: at_bt_cmds.c  at_bt_cmds.h  at_commands.h  at_leaudio_cmds.c  at_leaudio_cmds.h  at_parser.c  at_parser.h  at_system_cmds.c  at_system_cmds.h  at_wifi_cmds.c  at_wifi_cmds.h  cdc_acm.c  cdc_acm.h
source/ipc/: audio_ipc.c  audio_ipc.h
source/le_audio/: bap_broadcast.c  bap_broadcast.h  bap_broadcast_sink.c  bap_broadcast_sink.h  bap_unicast.c  bap_unicast.h  isoc_handler.c  isoc_handler.h  le_audio_manager.c  le_audio_manager.h  pacs.c  pacs.h
source/midi/: midi_ble_service.c  midi_ble_service.h  midi_router.c  midi_router.h  midi_usb.c  midi_usb.h
source/usb/: usb_composite.c  usb_composite.h
source/wifi/: cyhal_hw_types.h  cyhal_modules.h  cyhal_sdio.c  cyhal_sdio.h  whd_buffer_impl.c  whd_buffer_impl.h  wifi_bridge.c  wifi_bridge.h  wifi_sdio.c  wifi_sdio.h
